rm cmd/scenario, update comments
