# internal/mutex/mutex_main.go
@@ -1,24 +1,25 @@
 package mutex
 
 import (
-	"github.com/sirupsen/logrus"
 	"goBully/internal/identity"
+
+	"github.com/sirupsen/logrus"
 )
 
 /* METHODS overview:
-	MUTEX_MAIN
-	- receiveMutexMessage()    // map logic after message
-	- enterCriticalSection()   // enter critical section
-	- leaveCriticalSection()   // leave critical section
-	MUTEX_RECEIVE
-	- receivedRequestMessage() // received a 'request' message
-	- receiveMessageHeld()     // received a request message, your state: held
-	- receiveMessageWanting()  // received a request message, your state: wanting
-	MUTEX_SEND
-	- requestCriticalArea()    // tell all users that this user wants to enter the critical section
-	- sendRequestToUser()      // send request message to a user
-	- checkClientIfResponded() // listen if client reply-ok'ed and check with him back if not
-	- clientHealthCheck()      // send health check to the client after a period of time
+MUTEX_MAIN
+- receiveMutexMessage()    // map logic after message
+- enterCriticalSection()   // enter critical section
+- leaveCriticalSection()   // leave critical section
+MUTEX_RECEIVE
+- receivedRequestMessage() // received a 'request' message
+- receiveMessageHeld()     // received a request message, your state: held
+- receiveMessageWanting()  // received a request message, your state: wanting
+MUTEX_SEND
+- requestCriticalArea()    // tell all users that this user wants to enter the critical section
+- sendRequestToUser()      // send request message to a user
+- checkClientIfResponded() // listen if client reply-ok'ed and check with him back if not
+- clientHealthCheck()      // send health check to the client after a period of time
 */
 
 // SEND RESPONSES TO
@@ -28,6 +29,7 @@ var mutexSendRequests []channelUserRequest
 // WAIT FOR RESPONSES
 // store all user to wait for here
 var mutexWaitingRequests []channelUserRequest
+
 // store reply-ok user answers here
 var mutexReceivedRequests []channelUserRequest
 
@@ -39,7 +41,7 @@ var mutexCriticalSection = make(chan string)
 
 /*
 receiveMutexMessage - map logic after message
- */
+*/
 func receiveMutexMessage(mutexMessage MessageMutexDTO) MessageMutexDTO {
 	logrus.Infof("[mutex_main.receiveMutexMessage] received message")
 	// received a request message
@@ -49,8 +51,10 @@ func receiveMutexMessage(mutexMessage MessageMutexDTO) MessageMutexDTO {
 	var mutexMessageResponse MessageMutexDTO
 
 	switch mutexMessage.Msg {
-	case RequestMessage: receivedRequestMessage(mutexMessage, &mutexMessageResponse)
-	default: logrus.Fatalf("[mutex_main.receiveMutexMessage] message: %s, is not could not a request message", mutexMessage.Msg)
+	case RequestMessage:
+		receivedRequestMessage(mutexMessage, &mutexMessageResponse)
+	default:
+		logrus.Fatalf("[mutex_main.receiveMutexMessage] message: %s, is not could not a request message", mutexMessage.Msg)
 	}
 	// respond with a reply-ok message - increase clock
 	incrementClock(mutexMessage.Time)
@@ -62,11 +66,11 @@ func receiveMutexMessage(mutexMessage MessageMutexDTO) MessageMutexDTO {
 enterCriticalSection - enter critical section
 1. update state to 'held'
 2. wait to get notified to
- */
+*/
 func enterCriticalSection() {
 	state = StateHeld
 	for true {
-		stateChange := <- mutexCriticalSection
+		stateChange := <-mutexCriticalSection
 		if stateChange == StateReleased {
 			logrus.Infof("[mutex_main.enterCriticalSection] 'released' state received, return")
 			break
@@ -97,7 +101,7 @@ func leaveCriticalSection() {
 
 /*
 removeChannelUserRequest - remove a channelUserRequest from a list (mutexSendRequests, mutexWaitingRequests, mutexReceivedRequests)
- */
+*/
 func removeChannelUserRequest(channelReq channelUserRequest, channelReqs []channelUserRequest) []channelUserRequest {
 	for i, req := range channelReqs {
 		if req.userEndpoint == channelReq.userEndpoint {
@@ -114,7 +118,7 @@ func removeChannelUserRequest(channelReq channelUserRequest, channelReqs []chann
 
 /*
 incrementClock - increase local lamport lock
- */
+*/
 func incrementClock(i int32) int32 {
 	clock = max(clock, i)
 	logrus.Infof("[mutex_main.incrementClock] increasing local clock to %s", clock)
@@ -123,7 +127,7 @@ func incrementClock(i int32) int32 {
 
 /*
 max - simple max function with int32 types
- */
+*/
 func max(i int32, j int32) int32 {
 	if i > j {
 		return i
@@ -137,8 +141,8 @@ func max(i int32, j int32) int32 {
 
 // message to channel to identify users
 type channelUserRequest struct {
-	userEndpoint string
-	user identity.InformationUserDTO
-	channel chan string
+	userEndpoint     string
+	user             identity.InformationUserDTO
+	channel          chan string
 	sendHealthChecks bool
 }
